--- a/src/Club/ShopBundle/Resources/views/AdminOrderFilter/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrderFilter/form.html.twig
@@ -2,8 +2,8 @@
 <div id="submit" class="box-01 box" style="display:none;">
   <form method="POST" action="{{ path('club_shop_adminorderfilter_filter') }}">
 
-    {{ form_row(form) }}
-    <input type="submit" value="Filter" class="input-submit" />
+    {{ form_widget(form) }}
+    <input type="submit" value="{% trans %}Filter{% endtrans %}" class="input-submit" />
 
   </form>
 </div>
