--- a/src/Club/LayoutBundle/Resources/views/Default/attribute_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/attribute_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/attributes-display-icon.png') }}" class="ico" alt="Attribute" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/attributes-display-icon.png') }}" class="ico" alt="{% trans %}Attribute{% endtrans %}" title="{% trans %}Attribute{% endtrans %}" /></a>
