--- a/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCategory/index.html.twig
@@ -1,15 +1,14 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
-<p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>Create category</span></a></p>
+<p class="box"><a href="{{ path('admin_shop_category_new') }}" class="btn-create"><span>{% trans %}Create category{% endtrans %}</span></a></p>
 
 <table>
   <thead>
     <tr>
-      <th>Category</th>
-      <th>Location</th>
-      <th>Actions</th>
+      <th>{% trans %}Category{% endtrans %}</th>
+      <th>{% trans %}Location{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
@@ -29,7 +28,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">There are no categories at the time</td>
+    <td colspan="3">{% trans %}There are no categories.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
