--- a/src/Club/ShopBundle/Resources/views/AdminOrder/order_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/order_form.html.twig
@@ -1,10 +1,10 @@
 <table>
   <thead>
   <tr>
-    <th width="250">Product name</th>
-    <th width="80">Unit price</th>
-    <th width="80">Quantity</th>
-    <th width="70">Summary</th>
+    <th width="250">{% trans %}Product name{% endtrans %}</th>
+    <th width="80">{% trans %}Unit price{% endtrans %}</th>
+    <th width="80">{% trans %}Quantity{% endtrans %}</th>
+    <th width="70">{% trans %}Summary{% endtrans %}</th>
   </tr>
   </thead>
   <tbody>
@@ -17,7 +17,7 @@
   </tr>
   {% else %}
   <tr>
-    <td colspan="4">You have no products.</td>
+    <td colspan="4">{% trans %}You have no products.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
@@ -26,7 +26,7 @@
     <td colspan="4">&#160;</td>
   </tr>
   <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
+    <td style="text-align: right; padding-right: 20px;" colspan="3"><b>{% trans %}Summary{% endtrans %}</b></td>
     <td>{{ order.vatPrice|price }}</td>
   </tr>
   </tfoot>
