--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -1,25 +1,23 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>Create payment method</span></a></p>
+<p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>{% trans %}Create payment method{% endtrans %}</span></a></p>
 
 <table>
   <thead>
     <tr>
-      <th>Id</th>
-      <th>Payment method</th>
-      <th>Actions</th>
+      <th>{% trans %}Payment method{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3">&#160;</td>
+      <td colspan="2">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for payment_method in payment_methods %}
     <tr>
-      <td>{{ payment_method.id }}</td>
       <td>{{ payment_method.paymentMethodName }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_payment_method_edit', { 'id':payment_method.id })} %}
@@ -28,7 +26,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">There are no payment_methods at the time</td>
+    <td colspan="2">{% trans %}There are no payment methods.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
