--- a/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSpecial/index.html.twig
@@ -1,16 +1,16 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('club_shop_adminspecial_new') }}" class="btn-create"><span>Create special</span></a></p>
+<p class="box"><a href="{{ path('club_shop_adminspecial_new') }}" class="btn-create"><span>{% trans %}Create special{% endtrans %}</span></a></p>
 
 <table>
   <thead>
     <tr>
-      <th>Product</th>
-      <th>Price</th>
-      <th>Start date</th>
-      <th>Expire date</th>
-      <th>Actions</th>
+      <th>{% trans %}Product{% endtrans %}</th>
+      <th>{% trans %}Price{% endtrans %}</th>
+      <th>{% trans %}Start date{% endtrans %}</th>
+      <th>{% trans %}Expire date{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
@@ -32,7 +32,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no specials at the time</td>
+    <td colspan="5">{% trans %}There are no special prices.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
