Added translation for location config.

--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -4,7 +4,7 @@
   <thead>
     <th>&#160;</th>
     <th>{% trans %}Product name{% endtrans %}</th>
-    <th>{% trans %}Price{% endtrans %}</th>
+    <th width="80">{% trans %}Price{% endtrans %}</th>
     <th>{% trans %}Action{% endtrans %}</th>
   </thead>
   <tfoot>
