--- a/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
@@ -1,9 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block body %}
-<h2>Location config</h2>
+<h2>{% trans %}Location config{% endtrans %}</h2>
 
-<p>If a location does not have any settings, it will relay on its parents.</p>
+<p>{% trans %}If a location does not have any settings, it will relay on its parents.{% endtrans %}</p>
 
 <form method="post" action="{{ path('admin_location_config', {'id':location.id}) }}">
 {% include "ClubUserBundle:AdminLocationConfig:form.html.twig" %}
