--- a/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
@@ -1,6 +1,6 @@
-        <span class="label label-06"><a href="{{ path('shop_checkout') }}">View backet</a></span>
-        <span class="label label-06"><a href="{{ path('shop_checkout_payment') }}">Choose Payment</a></span>
-        <span class="label label-06"><a href="{{ path('shop_checkout_review') }}">Review order</a></span>
-        <span class="label label-06">Done</span>
+        <span class="label label-06"><a href="{{ path('shop_checkout') }}">{% trans %}View cart{% endtrans %}</a></span>
+        <span class="label label-06"><a href="{{ path('shop_checkout_payment') }}">{% trans %}Choose payment{% endtrans %}</a></span>
+        <span class="label label-06"><a href="{{ path('shop_checkout_review') }}">{% trans %}Review order{% endtrans %}</a></span>
+        <span class="label label-06">{% trans %}Done{% endtrans %}</span>
 
 
