--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -1,32 +1,32 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
-
-<h3>Review order</h3>
+<h3>{% trans %}Review order{% endtrans %}</h3>
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
-<h3>Order</h3>
-
+<h3>{% trans %}Order{% endtrans %}</h3>
 <div id="sf_admin_container">
 {% include "ClubShopBundle:Checkout:cart_form.html.twig" %}
 
-<h3>Customer information</h3>
-<p>Company: {{ cart.customerAddress.companyName }}<br />
-CVR: {{ cart.customerAddress.cvr }}<br />
-Name: {{ cart.customerAddress.firstName }} {{ cart.customerAddress.lastName }}<br />
-Street: {{ cart.customerAddress.street }}<br />
-City: {{ cart.customerAddress.postalCode }} {{ cart.customerAddress.city }}<br />
-State: {{ cart.customerAddress.state }}<br />
-Country: {{ cart.customerAddress.country }}</p>
+<h3>{% trans %}Customer Information{% endtrans %}</h3>
+<p>{% trans with {'%company%':cart.customerAddress.companyName} %}Company: %company%{% endtrans %}<br />
+{% trans with {'%cvr%':cart.customerAddress.companyName} %}CVR: {% endtrans %}<br />
+{% trans with {'%firstname%':cart.customerAddress.firstName,'%lastname%':cart.customerAddress.lastName} %}Name: %firstname% %lastname%{% endtrans %}<br />
+{% trans with {'%street%':cart.customerAddress.street} %}Street: %street%{% endtrans %}<br />
+{% trans with {'%postal%':cart.customerAddress.postalCode} %}Postal: %postal%{% endtrans %}<br />
+{% trans with {'%city%':cart.customerAddress.city} %}City: %city%{% endtrans %}<br />
+{% trans with {'%country%':cart.customerAddress.country} %}Country: %country%{% endtrans %}</p>
 
-<h3>Payment information</h3>
+<h3>{% trans %}Payment Information{% endtrans %}</h3>
 <p>{{ cart.paymentMethod }}</p>
+
+<h3>{% trans %}Shipping Information{% endtrans %}</h3>
+<p>{{ cart.shipping }}</p>
 
 <form method="POST" action="{{ path('shop_checkout_process') }}">
   <div class="box-01">
-    <p class="nom"><input type="submit" value="Place Order" class="input-submit" /></p>
+    <p class="nom"><input type="submit" value="{% trans %}Confirm order{% endtrans %}" class="input-submit" /></p>
   </div> <!-- /box-01 -->
 </form>
 </div>
