Fixed some more translations on events.

--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -37,7 +37,7 @@
         <tr>
           <th>&#160;</th>
           <td>
-            <p>Nothing. <a href="{{ path('admin_event_event_new') }}" class="ico-list">Create</a></p>
+            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('admin_event_event_new') }}" class="ico-list">{% trans %}Create{% endtrans %}</a></p>
           </td>
         </tr>
 
