Fixed routing and default layout for feedback bundle.

--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -1,3 +1,8 @@
+<ul class="box f-right">
+  <li><a href="{{ path('club_feedback_feedback_index') }}"><span><strong>{% trans %}Feedback{% endtrans %}</strong></span></a></li>
+</ul>
+
+
 <ul class="box">
   {% for item in menu %}
 
