Added explanation of the feedback form.

--- a/src/Club/FeedbackBundle/Resources/views/Feedback/index.html.twig
+++ b/src/Club/FeedbackBundle/Resources/views/Feedback/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+        <p>{% trans %}All messages in this form will go back to the developers of the system, so feel free to give any feedback that could help improve the system.{% endtrans %}</p>
         <!-- Contact -->
         <fieldset>
           <legend>Feedback</legend>
