--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -1,11 +1,13 @@
 {% extends "ClubMessageBundle::base.html.twig" %}
 
 {% block body %}
-<h2>{% trans %}Messages{% endtrans %}</h2>
+<p class="box">
+  <a href="{{ path('club_message_adminmessage_new') }}" class="btn-create"><span>{% trans %}Create message{% endtrans %}</span></a>
+</p>
 
 <table>
   <thead>
-    }<tr>
+    <tr>
       <th>{% trans %}#{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Subject{% endtrans %}</th>
