--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -12,6 +12,7 @@
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Subject{% endtrans %}</th>
       <th>{% trans %}Sent at{% endtrans %}</th>
+      <th>{% trans %}Status{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
@@ -23,11 +24,18 @@
       <td>{{ message.subject }}</td>
       <td>{{ message.sentAt|date('Y-m-d H:i:s') }}</td>
       <td>
+        {% if message.processed %}
+          {% trans %}Sent{% endtrans %}
+        {% else %}
+          {% trans %}Queued{% endtrans %}
+        {% endif %}
+      <td>
+        {% include "ClubLayoutBundle:Default:process_link.html.twig" with {'url':path('club_message_adminmessage_process', {'id':message.id})} %}
       </td>
     </tr>
   {% else %}
     <tr>
-      <td colspan="4">{% trans %}No messages has been sent.{% endtrans %}</td>
+      <td colspan="6">{% trans %}No messages has been sent.{% endtrans %}</td>
     </tr>
   {% endfor %}
   </tbody>
