Added batch job to send queued mails.

--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -34,6 +34,7 @@
           {% trans %}Queued{% endtrans %}
         {% endif %}
       <td>
+        {% include "ClubLayoutBundle:Default:log_link.html.twig" with {'url':path('club_message_adminmessage_log', {'id':message.id})} %}
         {% if not message.processed %}
         {% include "ClubLayoutBundle:Default:process_link.html.twig" with {'url':path('club_message_adminmessage_process', {'id':message.id})} %}
         {% endif %}
