--- a/src/Club/MessageBundle/Resources/views/AdminMessage/new.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/new.html.twig
@@ -10,7 +10,11 @@
 
   </fieldset>
 
-  {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
+  <hr class="noscreen" />
+  <div class="box-01">
+    <p class="nom"><input type="submit" value="{% trans %}Find Recipients{% endtrans %}" class="input-submit" /></p>
+  </div> <!-- /box-01 -->
+
 </form>
 
 {% endblock %}
