--- a/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/index.html.twig
@@ -36,6 +36,7 @@
       <td>
         {% if not message.processed %}
         {% include "ClubLayoutBundle:Default:process_link.html.twig" with {'url':path('club_message_adminmessage_process', {'id':message.id})} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_message_adminmessage_edit', {'id':message.id})} %}
         {% else %}
         {% include "ClubLayoutBundle:Default:log_link.html.twig" with {'url':path('club_message_adminmessage_log', {'id':message.id})} %}
         {% endif %}
