--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipientGroup.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipientGroup.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubMessageBundle::base.html.twig" %}
 
 {% block body %}
-<form method="post" action="{{ path('club_message_adminmessage_new') }}">
+<form method="post" action="{{ path('club_message_adminmessage_recipientgroup', {'id':message.id}) }}">
   <fieldset>
     <legend>Message</legend>
 
