Remove recipients from message.

--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -24,7 +24,7 @@
       <tr>
         <td>{{ line.type }}</td>
         <td>{{ line.message }}</td>
-        <td><a href="#">Delete</a></td>
+        <td><a href="{{ line.path }}">Delete</a></td>
       </tr>
       {% else %}
       <tr>
