Changed styles for table, go get better support for 3 party libs.

--- a/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
@@ -8,7 +8,7 @@
 
 <h2>{% trans %}Account{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Number{% endtrans %}</th>
