--- a/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/recipient.html.twig
@@ -11,7 +11,7 @@
 <fieldset>
   <legend>Recipients</legend>
 
-  <table>
+  <table class="style">
     <thead>
       <tr>
         <th width="80">Type</th>
