--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/history.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/history.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>Coupon</th>
