--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -35,7 +35,7 @@
 {% include "ClubShopBundle:AdminOrder:order_form.html.twig" with {'order':order} %}
 
 <h2>{% trans %}Order history{% endtrans %}</h2>
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Date{% endtrans %}</th>
