--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -5,7 +5,7 @@
 
 {% render "ClubShopBundle:AdminOrderFilter:getFilter" %}
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Order number{% endtrans %}</th>
