--- a/src/Club/ShopBundle/Resources/views/Order/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/edit.html.twig
@@ -37,7 +37,7 @@ Country: {{ order.billingAddress.country }}</p>
 {% include "ClubShopBundle:AdminOrder:order_form.html.twig" with {'order':order} %}
 
 <h2>Order history</h2>
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>Date</th>
