--- a/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/product_table.html.twig
@@ -1,6 +1,6 @@
 <h3>{% trans %}Products{% endtrans %}</h3>
 
-<table>
+<table class="style">
   <thead>
     <th>&#160;</th>
     <th>{% trans %}Product name{% endtrans %}</th>
