--- a/src/Club/TaskBundle/Resources/views/Task/index.html.twig
+++ b/src/Club/TaskBundle/Resources/views/Task/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Task{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Task{% endtrans %}</th>
