--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -11,7 +11,7 @@
 {% include "ClubLayoutBundle:Default:paginator.html.twig" %}
 
 <form method="post" action="{{ path('admin_user_batch') }}">
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>[x]</th>
