--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -4,7 +4,7 @@
 <p class="box"><a href="{{ path('admin_group_new') }}" class="btn-create"><span>{% trans %}Create group{% endtrans %}</span></a></p>
 <h2>{% trans %}Groups{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Group{% endtrans %}</th>
