--- a/src/Club/AccountBundle/Resources/views/AdminLedger/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminLedger/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Ledger{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}User{% endtrans %}</th>
