--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Attends{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Event{% endtrans %}</th>
