--- a/src/Club/MailBundle/Resources/views/AdminMail/index.html.twig
+++ b/src/Club/MailBundle/Resources/views/AdminMail/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>{% trans %}Mail{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Event{% endtrans %}</th>
