--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>{% trans %}Create payment method{% endtrans %}</span></a></p>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Payment method{% endtrans %}</th>
