--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('admin_shop_shipping_new') }}" class="btn-create"><span>{% trans %}Create shipping{% endtrans %}</span></a></p>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Shipping{% endtrans %}</th>
