--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -1,6 +1,6 @@
 <h2>{% trans %}Subscriptions{% endtrans %}</h2>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Active{% endtrans %}</th>
