--- a/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/UserNote/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('admin_user_note_new', {'id':user.id}) }}" class="btn-create"><span>{% trans %}Create note{% endtrans %}</span></a></p>
 
-<table>
+<table class="style">
   <thead>
     <tr>
       <th>{% trans %}Created at{% endtrans %}</th>
