Added message attachment upload.

--- a/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/form.html.twig
@@ -1,4 +1,12 @@
   <fieldset>
+    <legend>Sender</legend>
+
+    {{ form_row(form.sender_name) }}
+    {{ form_row(form.sender_address) }}
+
+  </fieldset>
+
+  <fieldset>
     <legend>Message</legend>
 
     {{ form_widget(form) }}
