--- a/src/Club/LayoutBundle/Resources/views/Default/tinymce.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/tinymce.html.twig
@@ -1,13 +1,7 @@
-<script type="text/javascript" src="{{ asset('bundles/clublayout/tinymce/jscripts/tiny_mce/tiny_mce.js') }}" ></script>
+<script type="text/javascript" src="{{ asset('bundles/clublayout/tinymce/jscripts/tiny_mce/tiny_mce.js') }}"></script>
 <script type="text/javascript">
-tinyMCE.init({
-        mode : "textareas",
-        theme : "advanced",
-
-        theme_advanced_toolbar_location : "top",
-        theme_advanced_statusbar_location : "bottom",
-
-        skin : "o2k7",
-        skin_variant : "silver",
-});
-</script >
+  tinyMCE.init({
+    mode : "textareas",
+    theme : "simple",
+  });
+</script>
