Better reporting of sent messages.

--- a/src/Club/MessageBundle/Resources/views/AdminMessage/log.html.twig
+++ b/src/Club/MessageBundle/Resources/views/AdminMessage/log.html.twig
@@ -17,7 +17,12 @@
     <tr>
       <td>{{ queue.user.profile.name }}</td>
       <td>{{ queue.recipient }}</td>
-      <td>{{ queue.processed }}</td>
+      <td>
+        {% if queue.processed %}
+          Sent
+        {% else %}
+          Queued for delivery
+        {% endif %}</td>
       <td>{{ queue.errorMessage }}</td>
     </tr>
   {% else %}
