Improved add event, with better start date

--- a/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('admin_event_event_new') }}">
+<form method="post" action="{{ path('club_event_adminevent_new') }}">
 {% include "ClubEventBundle:AdminEvent:form.html.twig" with {'form': form} %}
 </form>
 
