--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -6,7 +6,7 @@
   {% include "ClubEventBundle:AdminEvent:_navigation.html.twig" %}
 </div> <!-- /nav-top -->
 
-<p class="box"><a href="{{ path('admin_event_event_new') }}" class="btn-create"><span>{% trans %}Create event{% endtrans %}</span></a></p>
+<p class="box"><a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="btn-create"><span>{% trans %}Create event{% endtrans %}</span></a></p>
 
       <!-- Calendar -->
       <table id="calendar-02" class="width100">
@@ -37,7 +37,7 @@
         <tr>
           <th>&#160;</th>
           <td>
-            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('admin_event_event_new') }}" class="ico-list">{% trans %}Create{% endtrans %}</a></p>
+            <p>{% trans %}Nothing.{% endtrans %} <a href="{{ path('club_event_adminevent_new', {'year':current|date('Y'), 'month':current|date('n')}) }}" class="ico-list">{% trans %}Create{% endtrans %}</a></p>
           </td>
         </tr>
 
